# mini-go-engine

./: .gitignore  CMakeLists.txt  test.sgf
data/filelists/: test_600.txt  train_10k.txt  val_600.txt
python-ai/: check_dataset.py  dataset.py  infer.py  make_filelist.py  model.py  train.py
src/: main.cpp
src/ai/: BoardSerializer.cpp  BoardSerializer.h  EvaluationResult.h  MCTS.cpp  MCTS.h  MCTSNode.cpp  MCTSNode.h  PythonEvaluator.cpp  PythonEvaluator.h
src/core/: Board.cpp  Board.h  Game.cpp  Game.h  sgf_parser.cpp  sgf_parser.h  sgf_utils.cpp  sgf_utils.h  sgf_writer.h
src/sgf/: sgf_parser.h  sgf_utils.cpp  sgf_utils.h  sgf_writer.cpp
src/ui/mainwindow/: mainwindow.cpp  mainwindow.h
src/ui/pages/: GamePage.cpp  GamePage.h  HomePage.cpp  HomePage.h  ReviewDialog.cpp  ReviewDialog.h  WinRateChartWidget.cpp  WinRateChartWidget.h
src/ui/widgets/: BoardWidget.cpp  BoardWidget.h
tools/: DataExtractor.cpp  DataExtractor.h  extract_main.cpp
